[package]
name = "rust-starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# https://doc.rust-lang.org/cargo/reference/cargo-targets.html?highlight=%5B%5Bbin%5D%5D#configuring-a-target
[[bin]]
name = "leetcode"
path = "LeetCode/rs/main.rs"
